# xrce_ros2_control

./: README.md  package.xml  setup.cfg  setup.py
launch/: holybro_control.launch.py  holybro_launch.py  offboard_pos_control.launch.py  shafter_control.launch.py  shafter_launch.py
rviz/: lidar_2d.rviz
scripts/: att_control_lidar_2d.py  att_control_lidar_2d_vel.py  att_control_lidar_2d_vel2.py  base_shafter_land.py  dlio2fmu.py  fake_scan_publisher.py  filtered_vel_control.py  genObstacles.py  gen_obs_yaml.py  hw_pos_sp.py  keyboard_teleop.py  laserBridge.py  obstacles.sdf  obstacles.yaml  obstacles_from_yaml.py  offboard_traj_control.py  pid_saa_shafter.py  rrtStar_planner.py  thr_control_lidar_2d.py  vel_controller.py
test_scripts/: att_control.py  cam_gz_relay.py  camera_gz_ros2.py  dont_use_this.py  filtered_vel_controller.py  good_pid_saa_shafter.py  mocap2fmu_optitrack.py  pid_saa_shafter.py  pid_saa_shafter_land.py  plotter.py  print_position.py  takeoff_land.py  thr_offboard.py  vio2fmu.py
test_scripts/kvenv/: pyvenv.cfg
xrce_ros2_control/: att_control_lidar_2d.py  att_control_lidar_2d_vel.py  hw_pos_sp.py  mocap2fmu.py  offboard_traj_control.py  px4_tf.py  thr_control_lidar_2d.py  vins2fmu.py
