<?xml version="1.0"?>
<package format="3">
  <name>xrce_ros2_control</name>
  <version>0.1.0</version>
  <description>Offboard UAV control node using PX4 and ROS2</description>

  <maintainer email="vissan@ltu.se">Viswa Narayanan Sankaranarayanan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>ros2-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
